--- a/voiceland-core/Cargo.toml
+++ b/voiceland-core/Cargo.toml
@@ -11,6 +11,7 @@ tokio = { workspace = true }
 serde = { workspace = true }
 serde_yaml = { workspace = true }
 anyhow = { workspace = true }
+ulid = { workspace = true }
 
 voiceland-common = { workspace = true }
 
