--- a/voiceland_core/Cargo.toml
+++ b/voiceland_core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "voiceland-core"
+name = "voiceland_core"
 version = "1.0.0"
 edition = "2021"
 license = "AGPL-3.0"
@@ -13,7 +13,7 @@ serde_yaml = { workspace = true }
 anyhow = { workspace = true }
 ulid = { workspace = true }
 
-voiceland-common = { workspace = true }
+voiceland_common = { workspace = true }
 
 rustls-pemfile = "1"
 rcgen = "0.11.1"
