--- a/voiceland_protocol/Cargo.toml
+++ b/voiceland_protocol/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
 name = "voiceland_protocol"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "AGPL-3.0"
 
 [dependencies]
