refactor: more changes

--- a/voiceland_internal_tests/Cargo.toml
+++ b/voiceland_internal_tests/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 license = "AGPL-3.0"
 
 [dependencies]
-rsmpeg = { workspace = true }
+# rsmpeg = { workspace = true }
 voiceland_protocol = { path = "../voiceland_protocol" }
