--- a/voiceland_protocol/Cargo.toml
+++ b/voiceland_protocol/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2021"
 license = "AGPL-3.0"
 
 [dependencies]
-rsmpeg = { workspace = true }
-serde = { workspace = true }
 anyhow = { workspace = true }
+#serde = { workspace = true }
+#rsmpeg = { workspace = true }
 
-num-traits = "0.2"
-num-derive = "0.4"
+#num-traits = "0.2"
+#num-derive = "0.4"
