--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ resolver = "2"
 quinn = "0"
 rustls = { version = "0", features = ["dangerous_configuration", "quic"] }
 tokio = { version = "1", features = ["full"] }
+futures = "0"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 anyhow = "1.0"
