--- a/voiceland_core/Cargo.toml
+++ b/voiceland_core/Cargo.toml
@@ -8,6 +8,7 @@ license = "AGPL-3.0"
 quinn = { workspace = true }
 rustls = { workspace = true }
 tokio = { workspace = true }
+futures = { workspace = true }
 serde = { workspace = true }
 serde_yaml = { workspace = true }
 anyhow = { workspace = true }
